[package]
authors = ["Paul Woolcock <pwoolcock@tenable.com>"]
name = "pwd"
version = "1.1.0"
documentation = "https://docs.rs/pwd"
homepage = "https://gitlab.com/pwoolcoc/pwd.git"
repository = "https://gitlab.com/pwoolcoc/pwd.git"
license = "MIT/Apache-2.0"
readme = "README.adoc"
keywords = ["unix", "passwd", "pwd", "ffi", "linux"]
categories = ["external-ffi-bindings", "filesystem"]
description = """
Safe interface to pwd.h
"""

[dependencies]
libc = "0.2"
